--- a/LibraryAPI/LibraryAPI.Tests/LibraryAPI.Tests.csproj
+++ b/LibraryAPI/LibraryAPI.Tests/LibraryAPI.Tests.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="JetBrains.Annotations" Version="2024.3.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="3.7.2" />
     <PackageReference Include="MSTest.TestFramework" Version="3.7.2" />
